--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>猫ハウス</title>
+    <i class="fas fa-cat"></i>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
