--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>猫ハウス</title>
-    <i class="fas fa-cat"></i>
+    <p><i class="fas fa-paw fa-5x"></i></p>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
     <h1>猫ハウス</h1>
