--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
+    <input type="button" value="OK">
+    <button>OK</button>
     <h1>猫ハウス</h1>
 <p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p>
 
