--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <p><i class="fas fa-cat"></i></p>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <p><i class="fas fa-crow"></i></p>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
     <input type="button" value="OK">
