--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
 
   
 <img src="IMG_2804 (1).jpeg" alt="吠えるフク" width="400" height="500"> 
-    <img src="IMG-8097.jpg" alt="クロキャットタワー" width="500" height="500">
-    <img src="日向ぼっこ.png" alt="フク日向ぼっこ" width="400" height="500">
+    <script src="モンキールフィ年賀状.jpg"></script>
+                 <script>
+                 $(function(){
+                 $("IMG_2804 (1).jpeg").toggle(function(){
+                     $(this).attr('src', 'モンキールフィ年賀状.jpg');
+                     })
+                     </script>
+<img src="IMG-8097.jpg" alt="クロキャットタワー"  width="500" height="500">
+<img src="日向ぼっこ.png" alt="フク日向ぼっこ" width="400" height="500">
 
 <hr>
 <h2>～メンバー紹介～</h2>
