--- a/index.html
+++ b/index.html
@@ -2,32 +2,36 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>猫ハウス</title>
+<!--     <title>猫ハウス</title> -->
+    <title>Cat House</title>
     <p><i class="fas fa-paw fa-5x"></i></p>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <p><i class="fas fa-cat"></i></p>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <p><i class="fas fa-crow"></i></p>
+<!--     <p><i class="fas fa-crow"></i></p>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> -->
   </head>
   <body>
     <input type="button" value="OK">
     <button>OK</button>
-    <h1>猫ハウス</h1>
-<p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p>
-
+<!--     <h1>猫ハウス</h1> -->
+    <h1>Cat House</h1>
+<!-- <p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p> -->
+    <p>Present members are 2 black cats.They are not good friends so far, hopefully they will enjoy to play and take a nap together in the future!</p>
   
 <img src="IMG_2804 (1).jpeg" alt="吠えるフク" width="400" height="500"> 
 <img src="IMG-8097.jpg" alt="クロキャットタワー"  width="500" height="500">
 <img src="日向ぼっこ.png" alt="フク日向ぼっこ" width="400" height="500">
 
 <hr>
-<h2>～メンバー紹介～</h2>
+<!-- <h2>～メンバー紹介～</h2> --
+<h2>～Introduction of members～</h2>
 <hr>
 <h3>クロ</h3>
+<h3>Kuro</h3>
 <p>女の子推定10歳。埼玉県で保護される。2012年5月家猫になりました。お客さん大好き！パパっこです。</p>
 
 <img src="IMG_1838.jpeg" alt="クロAmazon" width="400" height="500">
