--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <img src="日向ぼっこ.png" alt="フク日向ぼっこ" width="400" height="500">
 
 <hr>
-<!-- <h2>～メンバー紹介～</h2> --
+<!-- <h2>～メンバー紹介～</h2> -->
 <h2>～Introduction of members～</h2>
 <hr>
 <h3>クロ</h3>
