--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
 <!-- <h2>～メンバー紹介～</h2> -->
 <h2>～Introduction of members～</h2>
 <hr>
-<h3>クロ</h3>
+<!-- <h3>クロ</h3> -->
 <h3>Kuro</h3>
-<p>女の子推定10歳。埼玉県で保護される。2012年5月家猫になりました。お客さん大好き！パパっこです。</p>
+<!-- <p>女の子推定10歳。埼玉県で保護される。2012年5月家猫になりました。お客さん大好き！パパっこです。</p> -->
+    <p>A girl estimated to be 10 years old. She was adopted in Saitama on May 2012. She loves to have guests at home.</p>
 
 <img src="IMG_1838.jpeg" alt="クロAmazon" width="400" height="500">
 <img src="セーラー服クロ.jpg" alt="クロ" width="430" height="500">
 <img src="舌だしクロ.jpg" alt="クロ" width="450" height="500">
 <hr>
-<h4>フク</h4>
-<p>男の子で推定？歳。2020年8月家猫になりました。運動が大好きで活発だけど、とても怖がりさん。日々家族になついてきてますが、お客さんはまだ苦手です。</p>
+<!-- <h4>フク</h4> -->
+    <h4>Fuku</h4>
+<!-- <p>男の子で推定？歳。2020年8月家猫になりました。運動が大好きで活発だけど、とても怖がりさん。日々家族になついてきてますが、お客さんはまだ苦手です。</p> -->
+    <p>A boy estimated to be 2,3 years old. He was adopted in our yard on August 2020. He was very causcious when he was protectedbut after a half year he is becoming friendly to us.</p>
     <img src="IMG_2199.jpeg" alt="フク" width="400" height="600">
     <img src="フクカーテン.jpg" width="400" height="600">
     <img src="フクおめめ.jpg" width="500" height="600">
     <hr>
-    <h5>みんな大好きちゃおちゅ～る☟</h5>
+<!--     <h5>みんな大好きちゃおちゅ～る☟</h5> -->
+    <h5>Everyone loves Chao!</h5>
    <video src="フク草むら.MP4" controls width="1310px" height="1000px"><p>動画を再生できません。</p></video>
 
    <h6><small>&copy; 2021 kurofuku</small></h6>
