--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <input type="button" value="OK">
     <button>OK</button>
+    <a href="モンキールフィ年賀状.jpg" target="_blank" > <img src="モンキールフィー年賀状.jpg" alt="どくろマーク" width="400" height="500"> </a>
 <!--     <h1>猫ハウス</h1> -->
     <h1>Cat House</h1>
 <!-- <p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p> -->
