--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> -->
   </head>
   <body>
-    <input type="button" value="OK">
+<!--     <input type="button" value="OK"> -->
+    <input type="image" src="button.gif" name="OK" alt="OK">
 <!--     <button>OK</button> -->
     <button onclick="location.href=モンキールフィ年賀状</button>
+                     
 <!--     <h1>猫ハウス</h1> -->
     <h1>Cat House</h1>
 <!-- <p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p> -->
