--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> -->
   </head>
   <body>
+    <input type="button" value="click" onclick="(function(){var e=document.getElementById(‘print’);e.style.display=’block’})()"/>
+<div id="print" style="display:none">
+<img src="モンキールフィ年賀状.jpg"/>
+</div>
 <!--     <input type="button" value="OK"> -->
-    <input type="image" src="button.gif" name="OK" alt="OK">
+<!--     <input type="image" src="button.gif" name="OK" alt="OK"> -->
 <!--     <button>OK</button> -->
-    <button onclick="location.href=モンキールフィ年賀状</button>
+<!--     <button onclick="location.href=モンキールフィ年賀状</button> -->
                      
 <!--     <h1>猫ハウス</h1> -->
     <h1>Cat House</h1>
