--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> -->
   </head>
   <body>
-    <input type="button" value="click" onclick="(function(){var e=document.getElementById(‘print’);e.style.display=’block’})()"/>
+<!--     <input type="button" value="click" onclick="(function(){var e=document.getElementById(‘print’);e.style.display=’block’})()"/>
 <div id="print" style="display:none">
 <img src="モンキールフィ年賀状.jpg"/>
-</div>
+</div> -->
 <!--     <input type="button" value="OK"> -->
 <!--     <input type="image" src="button.gif" name="OK" alt="OK"> -->
 <!--     <button>OK</button> -->
