--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
 <!--     <h5>みんな大好きちゃおちゅ～る☟</h5> -->
     <h5>Everyone loves Chao!</h5>
    <video src="フク草むら.MP4" controls width="1310px" height="1000px"><p>動画を再生できません。</p></video>
-
+    
+    <img src="モンキールフィ年賀状.jpg" alt="モンキールフィ" width="400" height="600"> 
+    <img src="ルフィ.png" alt="" width="400" height="600"> 
+    <img src="モノクロ.jpeg" alt="" width="400" height="200"> 
+    <img src="" alt="" width="400" height="600">
+    <img src="" alt="" width="400" height="600"> 
+    <img src="" alt="" width="400" height="600"> 
+    <img src="" alt="" width="400" height="600"> 
+    <img src="" alt="" width="400" height="600"> 
    <h6><small>&copy; 2021 kurofuku</small></h6>
   </body>
   </html>
