--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
    <video src="フク草むら.MP4" controls width="1310px" height="1000px"><p>動画を再生できません。</p></video>
     
     <img src="モンキールフィ年賀状.jpg" alt="モンキールフィ" width="400" height="600" vspace="50" > 
-    <img src="ルフィ.png" alt="" width="400" height="600"vspace="50" > 
-    <img src="モノクロ.jpeg" alt="" width="400" height="200" vspace="50"> 
+    <img src="ルフィ.png" alt="ルフィ" width="400" height="600"　vspace="50" > 
+    <img src="モノクロ.jpeg" alt="モノクロ" width="400" height="200" vspace="50"> 
     <img src="" alt="" width="400" height="600">
     <img src="" alt="" width="400" height="600"> 
     <img src="" alt="" width="400" height="600"> 
