--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <img src="モンキールフィ年賀状.jpg" alt="モンキールフィ" width="400" height="600" vspace="50" > 
     <img src="ルフィ.png" alt="ルフィ" width="400" height="600"　vspace="50" > 
     <img src="モノクロ.jpeg" alt="モノクロ" width="400" height="200" vspace="50"> 
-    <img src="" alt="" width="400" height="600">
+    <img src="ルフィ金貨.jpeg" alt="ルフィ金貨" width="400" height="600" vspace="50">
     <img src="" alt="" width="400" height="600"> 
     <img src="" alt="" width="400" height="600"> 
     <img src="" alt="" width="400" height="600"> 
