--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
     <img src="ルフィ.png" alt="ルフィ" width="400" height="600"　vspace="50" > 
     <img src="モノクロ.jpeg" alt="モノクロ" width="400" height="200" vspace="50"> 
     <img src="ルフィ金貨.jpeg" alt="ルフィ金貨" width="400" height="600" vspace="50">
-    <img src="" alt="" width="400" height="600"> 
-    <img src="" alt="" width="400" height="600"> 
-    <img src="" alt="" width="400" height="600"> 
-    <img src="" alt="" width="400" height="600"> 
+    <img src="zoro.png" alt="zoro" width="400" height="600" vspace="50"> 
+    <img src="ワンピースオールメンバー.png" alt="ワンピースオールメンバー" width="400" height="600"vspace="50"> 
+    <img src="ワンピース勢ぞろい.jpeg" alt="ワンピース勢ぞろい" width="400" height="600" vspace="50"> 
+    <img src="ゾロ刀.gif" alt="ゾロ刀" width="400" height="600" vspace="50"> 
+    <img src="友達みてえのだろ.jpeg" alt="友達みてえのだろ" width="400" height="600" vspace="50"> 
+    <img src="Go to new world.png" alt="World" width="400" height="600" vspace="50"> 
    <h6><small>&copy; 2021 kurofuku</small></h6>
   </body>
   </html>
