--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
     <img src="フクカーテン.jpg" width="400" height="600">
     <img src="フクおめめ.jpg" width="500" height="600">
     <hr>
-<!--     <h5>みんな大好きちゃおちゅ～る☟</h5> -->
-    <h5>Everyone loves Chao!</h5>
+    
+    <h5>ムルちゃん</h5>
+    <p>フィンランドのおともだち</p>
+     <img src="unnamed(3).jpeg" width="500" height="600">
+<!--     <h6>みんな大好きちゃおちゅ～る☟</h6> -->
+    <h6>Everyone loves Chao!</h6>
    <video src="フク草むら.MP4" controls width="1310px" height="1000px"><p>動画を再生できません。</p></video>
     
     <img src="モンキールフィ年賀状.jpg" alt="モンキールフィ" width="420" height="600" vspace="50" > 
