--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--     <title>猫ハウス</title> -->
-    <title>Cat House</title>
+    <title>猫ハウス</title>
+<!--     <title>Cat House</title> -->
     <p><i class="fas fa-paw fa-5x"></i></p>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
@@ -25,32 +25,32 @@
 <!--     <button>OK</button> -->
 <!--     <button onclick="location.href=モンキールフィ年賀状</button> -->
                      
-<!--     <h1>猫ハウス</h1> -->
-    <h1>Cat House</h1>
-<!-- <p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p> -->
-    <p>Present members are 2 black cats.They are not good friends so far, hopefully they will enjoy to play and take a nap together in the future!</p>
+    <h1>猫ハウス</h1>
+<!--     <h1>Cat House</h1> -->
+<p>現在の構成メンバーは黒猫2匹。今は仲が悪いけど将来は一緒にご飯を食べたり、遊んだり、昼寝したりできるようになることが2021年の目標です！</p>
+<!--     <p>Present members are 2 black cats.They are not good friends so far, hopefully they will enjoy to play and take a nap together in the future!</p> -->
   
 <img src="IMG_2804 (1).jpeg" alt="吠えるフク" width="400" height="500"> 
 <img src="IMG-8097.jpg" alt="クロキャットタワー"  width="500" height="500">
 <img src="日向ぼっこ.png" alt="フク日向ぼっこ" width="400" height="500">
 
 <hr>
-<!-- <h2>～メンバー紹介～</h2> -->
-<h2>～Introduction of members～</h2>
+<h2>～メンバー紹介～</h2>
+<!-- <h2>～Introduction of members～</h2> -->
 <hr>
-<!-- <h3>クロ</h3> -->
-<h3>Kuro</h3>
-<!-- <p>女の子推定10歳。埼玉県で保護される。2012年5月家猫になりました。お客さん大好き！パパっこです。</p> -->
-    <p>A girl estimated to be 10 years old. She was adopted in Saitama on May 2012. She loves to have guests at home.</p>
+<h3>クロ</h3>
+<!-- <h3>Kuro</h3> -->
+<p>女の子推定10歳。埼玉県で保護される。2012年5月家猫になりました。お客さん大好き！パパっこです。</p>
+<!--     <p>A girl estimated to be 10 years old. She was adopted in Saitama on May 2012. She loves to have guests at home.</p> -->
 
 <img src="IMG_1838.jpeg" alt="クロAmazon" width="400" height="500">
 <img src="セーラー服クロ.jpg" alt="クロ" width="430" height="500">
 <img src="舌だしクロ.jpg" alt="クロ" width="450" height="500">
 <hr>
-<!-- <h4>フク</h4> -->
-    <h4>Fuku</h4>
-<!-- <p>男の子で推定？歳。2020年8月家猫になりました。運動が大好きで活発だけど、とても怖がりさん。日々家族になついてきてますが、お客さんはまだ苦手です。</p> -->
-    <p>A boy estimated to be 2,3 years old. He was adopted in our yard on August 2020. He was very causcious when he was protectedbut after a half year he is becoming friendly to us.</p>
+<h4>フク</h4>
+<!--     <h4>Fuku</h4> -->
+<p>男の子で推定？歳。2020年8月家猫になりました。運動が大好きで活発だけど、とても怖がりさん。日々家族になついてきてますが、お客さんはまだ苦手です。</p>
+<!--     <p>A boy estimated to be 2,3 years old. He was adopted in our yard on August 2020. He was very causcious when he was protectedbut after a half year he is becoming friendly to us.</p> -->
     <img src="IMG_2199.jpeg" alt="フク" width="400" height="600">
     <img src="フクカーテン.jpg" width="400" height="600">
     <img src="フクおめめ.jpg" width="500" height="600">
@@ -59,11 +59,11 @@
     <h5>ムルちゃん</h5>
     <p>フィンランドのおともだち</p>
      <img src="unnamed (3).jpg" width="600" height="700">
-<!--     <h6>みんな大好きちゃおちゅ～る☟</h6> -->
-    <h6>Everyone loves Chao!</h6>
+    <h6>みんな大好きちゃおちゅ～る☟</h6>
+<!--     <h6>Everyone loves Chao!</h6> -->
    <video src="フク草むら.MP4" controls width="1310px" height="1000px"><p>動画を再生できません。</p></video>
     
-    <img src="モンキールフィ年賀状.jpg" alt="モンキールフィ" width="420" height="600" vspace="50" > 
+<!--     <img src="モンキールフィ年賀状.jpg" alt="モンキールフィ" width="420" height="600" vspace="50" > 
     <img src="ルフィ.png" alt="ルフィ" width="420" height="600"　vspace="50" > 
     <img src="モノクロ.jpeg" alt="モノクロ" width="420" height="200" vspace="50"> 
     <img src="ルフィ金貨.jpeg" alt="ルフィ金貨" width="420" height="600" vspace="50">
@@ -72,7 +72,7 @@
     <img src="ワンピース勢ぞろい.jpeg" alt="ワンピース勢ぞろい" width="420" height="600" vspace="50"> 
     <img src="ゾロ刀.gif" alt="ゾロ刀" width="420" height="600" vspace="50"> 
     <img src="友達みてえのだろ.jpeg" alt="友達みてえのだろ" width="420" height="600" vspace="50"> 
-    <img src="Go to new world.png" alt="World" width="1390" height="600" vspace="50"> 
+    <img src="Go to new world.png" alt="World" width="1390" height="600" vspace="50">  -->
    <h6><small>&copy; 2021 kurofuku</small></h6>
   </body>
   </html>
